--- a/views/history.ejs
+++ b/views/history.ejs
@@ -71,7 +71,7 @@
 
     <h1>BMI Calculation History</h1>
     <form action="/clear-history" method="POST">
-        <button type="submit" class="btn btn-danger mt-4" >Очистить историю</button>
+        <button type="submit" class="btn btn-danger mt-4" >Clear history</button>
     </form>
 
     <table>
