--- a/views/about.ejs
+++ b/views/about.ejs
@@ -69,7 +69,7 @@
                         <a class="nav-link" href="/history">History</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/About BMI">About <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
