--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,7 +96,7 @@
                     <input type="number" class="form-control" id="age" placeholder="Age" required  name="age">
                 </div>
                 <div class="form-group col-md-4">
-                    <input type="number" class="form-control" id="height" placeholder="Height (cm)" required name="height" >
+                    <input type="number" class="form-control" id="height" placeholder="Height" required name="height" >
                     <select name="heightUnit">
                         <option value="cm">cm</option>
                         <option value="m">m</option>
